// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Adds CORS headers on error 1`] = `
Object {
  "event": Object {
    "headers": Object {
      "accept": "text/html,application/xhtml+xml,application/xml;q=0.9,image/avif,image/webp,image/apng,*/*;q=0.8,application/signed-exchange;v=b3;q=0.9",
      "accept-encoding": "gzip, deflate, br",
      "accept-language": "en-GB,en;q=0.9,en-US;q=0.8,pl;q=0.7,nb;q=0.6,no;q=0.5",
      "connection": "keep-alive",
      "host": "localhost:3000",
      "upgrade-insecure-requests": "1",
      "user-agent": "Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/86.0.4240.111 Safari/537.36",
    },
    "httpMethod": "GET",
    "path": "/foobar",
  },
  "response": Object {
    "headers": Object {
      "access-control-allow-credentials": false,
      "access-control-allow-headers": "Content-Type, Accept, X-Forwarded-For",
      "access-control-allow-methods": "GET, POST",
      "access-control-allow-origin": "https://www.vg.no, https://www.tek.no",
      "access-control-expose-headers": "x-my-header",
      "access-control-max-age": 2628000,
    },
    "statusCode": 500,
  },
}
`;

exports[`Adds CORS headers on success 1`] = `
Object {
  "event": Object {
    "headers": Object {
      "accept": "text/html,application/xhtml+xml,application/xml;q=0.9,image/avif,image/webp,image/apng,*/*;q=0.8,application/signed-exchange;v=b3;q=0.9",
      "accept-encoding": "gzip, deflate, br",
      "accept-language": "en-GB,en;q=0.9,en-US;q=0.8,pl;q=0.7,nb;q=0.6,no;q=0.5",
      "connection": "keep-alive",
      "host": "localhost:3000",
      "upgrade-insecure-requests": "1",
      "user-agent": "Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/86.0.4240.111 Safari/537.36",
    },
    "httpMethod": "GET",
    "path": "/foobar",
  },
  "response": Object {
    "headers": Object {
      "access-control-allow-credentials": true,
      "access-control-allow-headers": "Content-Type, Accept, X-Forwarded-For",
      "access-control-allow-methods": "GET, POST",
      "access-control-allow-origin": "https://www.vg.no, https://www.tek.no",
      "access-control-expose-headers": "x-my-header",
      "access-control-max-age": 2628000,
    },
    "statusCode": 200,
  },
}
`;

exports[`Does nothing if has no config 1`] = `
Object {
  "event": Object {
    "headers": Object {
      "accept": "text/html,application/xhtml+xml,application/xml;q=0.9,image/avif,image/webp,image/apng,*/*;q=0.8,application/signed-exchange;v=b3;q=0.9",
      "accept-encoding": "gzip, deflate, br",
      "accept-language": "en-GB,en;q=0.9,en-US;q=0.8,pl;q=0.7,nb;q=0.6,no;q=0.5",
      "connection": "keep-alive",
      "host": "localhost:3000",
      "upgrade-insecure-requests": "1",
      "user-agent": "Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/86.0.4240.111 Safari/537.36",
    },
    "httpMethod": "GET",
    "path": "/foobar",
  },
  "response": Object {
    "headers": Object {
      "access-control-allow-credentials": false,
    },
    "statusCode": 200,
  },
}
`;
